--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-teal: #02444a; /* Cor do fundo da imagem contato.png */
+    --primary-teal: #02444a; 
     --dark-gray: #2b2e35;
     --text-gray: #4a4a4a;
     --white: #ffffff;
@@ -113,7 +113,6 @@ body {
 .image-area {
     height: 70%;
     width: 115%;
-    /* AQUI ENTRA A SUA IMAGEM DO CARRO */
     background-image: url('img/car.png');
     background-size: 80%;
     background-position: right center;
@@ -155,9 +154,9 @@ body {
     display: flex;
     align-items: center;
     gap: 10px;
-    font-size: 1.4rem; /* Aumentei um pouco para bater com a imagem contato.png */
+    font-size: 1.4rem; 
     font-weight: 700;
-    font-style: italic; /* O print parece ter itálico nos números */
+    font-style: italic; 
 }
 
 .contact-item small {
@@ -463,7 +462,7 @@ button.hamburger {
     .header-phone { padding: 10px 0px; }
 }
 
-/* Tablet */
+
 @media (min-width: 601px) and (max-width: 1024px) {
     .left-content { padding: 77px 41px; }
     .left-content h1 { font-size: 2.8rem; }
